syntax = "proto3";

package notification_proto;

option go_package = "generated/proto/notification_proto";

import "google/protobuf/timestamp.proto";

enum NotificationType {
  ACTIVATION_EMAIL = 0;
}

message NotificationActivationEmailPayload {
  string otp_code = 1;
  string recipient_email = 2;
  string recipient_name = 3;
  google.protobuf.Timestamp expired_at = 4;
}

message Notification {
  NotificationType type = 1;
  oneof data {
    NotificationActivationEmailPayload activation_email = 2;
  }
}